# Unravel

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RETRIEVAL_VISUALIZATIONS.md  SECURITY.md  blog_post.md  linkedin_post.md  prd.md  pyproject.toml  pytest.ini  test_api_client.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: demo.md  docling-refactor-plan.md
rag_lens/: __init__.py  __main__.py  app.py  cli.py
rag_lens/services/: __init__.py  embedders.py  llm.py  storage.py  vector_store.py
rag_lens/services/chunking/: __init__.py
rag_lens/services/chunking/providers/: __init__.py  docling_provider.py
rag_lens/services/export/: generator.py  templates.py
rag_lens/services/retrieval/: core.py  reranking.py
rag_lens/services/retrieval/providers/: base.py  dense.py  hybrid.py  sparse.py
rag_lens/ui/: sidebar.py
rag_lens/ui/components/: __init__.py  chunk_viewer.py  chunking_config.py
rag_lens/ui/steps/: __init__.py  chunks.py  embeddings.py  export.py  query.py  upload.py
rag_lens/utils/: __init__.py  cache.py  diagnostics.py  parsers.py  qdrant_manager.py  ui.py  visualization.py
rag_visualizer/: app.py
rag_visualizer/services/: storage.py
rag_visualizer/services/chunking/: __init__.py  core.py
rag_visualizer/services/chunking/providers/: base.py  docling_provider.py
rag_visualizer/services/export/: generator.py  templates.py
rag_visualizer/services/retrieval/: __init__.py  core.py  reranking.py  reranking_backends.py
rag_visualizer/services/retrieval/providers/: __init__.py  base.py  dense.py  hybrid.py  sparse.py
rag_visualizer/ui/: sidebar.py
rag_visualizer/ui/components/: __init__.py  chunk_viewer.py  chunking_config.py
rag_visualizer/ui/components/sidebar_config/: __init__.py
rag_visualizer/ui/steps/: chunks.py  embeddings.py  query.py  upload.py
rag_visualizer/utils/: cache.py  parsers.py  visualization.py
scripts/: cleanup_demo_collections.py
tests/: README.md  __init__.py  conftest.py  test_chunks_navigation.py  test_infrastructure.py  test_sidebar_document_selection.py  test_sidebar_embedding_model.py  test_sidebar_max_characters.py  test_sidebar_output_format.py  test_sidebar_parsing_checkboxes.py  test_sidebar_save_apply.py  test_sidebar_text_splitting.py
tests/fixtures/documents/: sample_document.html  sample_document.md
tests/integration/: test_api_endpoint.py
tests/ui/steps/: __init__.py  test_chunks_step.py  test_export_step.py  test_upload_step.py
tests/unit/services/: README.md  test_api_server.py  test_chunk_docling_parity.py  test_chunking_service.py  test_embedders.py  test_export_generator_llm.py  test_llm_service.py  test_storage.py  test_vector_store.py  test_vertex_ai_integration.py
tests/unit/utils/: test_server_manager.py
unravel/: __init__.py  __main__.py  app.py  cli.py
unravel/services/: __init__.py  api_server.py  embedders.py  embedding_backends.py  llm.py  storage.py  vector_store.py
unravel/services/chunking/: __init__.py
unravel/services/chunking/providers/: base.py  docling_provider.py
unravel/services/export/: __init__.py  generator.py  templates.py
unravel/services/retrieval/: __init__.py  core.py  reranking.py
unravel/services/retrieval/providers/: base.py  dense.py  hybrid.py  sparse.py
unravel/ui/: constants.py  sidebar.py
unravel/ui/components/: __init__.py  api_endpoint.py  chunk_viewer.py  chunking_config.py  progress_bar.py  qdrant_dashboard.py  scroll_utils.py
unravel/ui/steps/: __init__.py  chunks.py  embeddings.py  export.py  query.py  upload.py
unravel/utils/: __init__.py  cache.py  diagnostics.py  parsers.py  qdrant_manager.py  server_manager.py  ui.py  visualization.py  web_scraper.py
